@@ -127,7 +127,9 @@ public class PostgresDatabaseOperations implements DatabaseOperations {
 
   @Override
   public java.util.List<String> createTableSqlStatements(boolean createSchemaVersionIndex) {
-    return java.util.Arrays.asList(
+    // Secondary indexes are created in ensureAspectIndexes() via CREATE INDEX CONCURRENTLY so
+    // existing populated tables are not blocked by long exclusive locks during index builds.
+    return java.util.List.of(
         """
         CREATE TABLE IF NOT EXISTS metadata_aspect_v2 (
           urn                           varchar(500) not null,
@@ -140,11 +142,40 @@ public class PostgresDatabaseOperations implements DatabaseOperations {
           createdfor                    varchar(255),
           CONSTRAINT pk_metadata_aspect_v2 PRIMARY KEY (urn, aspect, version)
         );
-        """,
-        "CREATE INDEX IF NOT EXISTS timeIndex ON metadata_aspect_v2 (createdon);",
-        "CREATE INDEX IF NOT EXISTS urnIndex ON metadata_aspect_v2 (urn);",
-        "CREATE INDEX IF NOT EXISTS aspectIndex ON metadata_aspect_v2 (aspect);",
-        "CREATE INDEX IF NOT EXISTS versionIndex ON metadata_aspect_v2 (version);");
+        """);
+  }
+
+  @Override
+  public void dropLegacyAspectTableIndexes(Connection connection) throws SQLException {
+    // DROP INDEX CONCURRENTLY cannot run inside a transaction block.
+    boolean prevAutoCommit = connection.getAutoCommit();
+    connection.setAutoCommit(true);
+    try (java.sql.Statement stmt = connection.createStatement()) {
+      stmt.execute("DROP INDEX CONCURRENTLY IF EXISTS urnindex");
+      stmt.execute("DROP INDEX CONCURRENTLY IF EXISTS aspectindex");
+      stmt.execute("DROP INDEX CONCURRENTLY IF EXISTS versionindex");
+    } finally {
+      connection.setAutoCommit(prevAutoCommit);
+    }
+  }
+
+  @Override
+  public void ensureAspectIndexes(Connection connection) throws SQLException {
+    // CREATE INDEX CONCURRENTLY cannot run inside a transaction block.
+    boolean prevAutoCommit = connection.getAutoCommit();
+    connection.setAutoCommit(true);
+    try (java.sql.Statement stmt = connection.createStatement()) {
+      stmt.execute(
+          "CREATE INDEX CONCURRENTLY IF NOT EXISTS timeIndex ON metadata_aspect_v2 (createdon);");
+      stmt.execute(
+          "CREATE INDEX CONCURRENTLY IF NOT EXISTS idx_v0_urn_aspect ON metadata_aspect_v2 (urn, aspect) WHERE version = 0;");
+      stmt.execute(
+          "CREATE INDEX CONCURRENTLY IF NOT EXISTS idx_corpuser_aspect_v0 ON metadata_aspect_v2 (urn, aspect) WHERE urn LIKE 'urn:li:corpuser:%' AND version = 0;");
+      stmt.execute(
+          "CREATE INDEX CONCURRENTLY IF NOT EXISTS idx_corpgroup_aspect_v0 ON metadata_aspect_v2 (urn, aspect) WHERE urn LIKE 'urn:li:corpGroup:%' AND version = 0;");
+    } finally {
+      connection.setAutoCommit(prevAutoCommit);
+    }
   }
 
   @Override
@@ -183,10 +214,6 @@ public class PostgresDatabaseOperations implements DatabaseOperations {
     try (java.sql.Statement stmt = connection.createStatement()) {
       stmt.execute(
           "CREATE INDEX CONCURRENTLY IF NOT EXISTS schemaVersionIndex ON metadata_aspect_v2 ((systemmetadata::jsonb ->> 'schemaVersion'));");
-      stmt.execute(
-          "CREATE INDEX CONCURRENTLY IF NOT EXISTS idx_corpuser_aspect_v0 ON metadata_aspect_v2 (urn, aspect) WHERE urn LIKE 'urn:li:corpuser:%' AND version = 0;");
-      stmt.execute(
-          "CREATE INDEX CONCURRENTLY IF NOT EXISTS idx_corpgroup_aspect_v0 ON metadata_aspect_v2 (urn, aspect) WHERE urn LIKE 'urn:li:corpGroup:%' AND version = 0;");
     } finally {
       connection.setAutoCommit(prevAutoCommit);
     }
